--- a/lab assignment 7/Source/lab7/www/templates/home.html
+++ b/lab assignment 7/Source/lab7/www/templates/home.html
@@ -2,7 +2,7 @@
   <!-- add a search input field on top of page -->
   <div  class="bar bar-subheader item-input-inset">
     <label class="item-input-wrapper">
-        <input type="search" placeholder="Search text"
+        <input type="search" placeholder="Enter Food Item "
                ng-model="data.searchKey"/>
     </label>
       <!-- when user clicks, do a search -->
